Data base upgrade to hobby-basic-> 9$/month

--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col text-right">
                 <a  href="{{ path("commende_performances") }}" class="btn btn-sm btn-primary">
-                  Toutes les performances
+                  Vour toutes les performances
                 </a>
                 </div>
               </div>
