--- a/src/AppBundle/Resources/views/part/kpi.html.twig
+++ b/src/AppBundle/Resources/views/part/kpi.html.twig
@@ -9,7 +9,7 @@
                       <span class="h2 font-weight-bold mb-0">{{produit.nombre|number_format(0, ',', '.')}}</span>
                     </div>
                     <div class="col-auto">
-                      <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                      <div class="icon icon-shape bg-info text-white rounded-circle shadow">
                         <i class="fas fa-chart-bar"></i>
                       </div>
                     </div>
