--- a/src/AppBundle/Resources/views/part/menu.html.twig
+++ b/src/AppBundle/Resources/views/part/menu.html.twig
@@ -92,7 +92,7 @@
           </li>             
           <li class="nav-item">
             <a class="nav-link" href="{{ path("docs_photos") }}">
-              <i class="ni ni-image text-orange"></i> Photos et fichiers
+              <i class="ni ni-image text-orange"></i> Teleharger
             </a>
           </li>                           
         </ul>
