--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -1,5 +1,5 @@
 {% extends "layout.html.twig" %}
-{% block title %}Orange Money report {% endblock %}
+{% block title %}Orange Money KYC {% endblock %}
 {% block fos_user_content %}
   <div class="main-content">
     <!-- Navbar -->
