--- a/app/Resources/views/commende/show.html.twig
+++ b/app/Resources/views/commende/show.html.twig
@@ -1,11 +1,11 @@
 {% extends "AppBundle::index.html.twig" %}
-  {% block title %}¨{{commende.affectation.pointVente.nom}} {% if commende.date %}{{ commende.date|date('D d  M Y') }}{% endif %}{% endblock %} 
+  {% block title %}¨{{commende.pointVente.nom}} {% if commende.date %}{{ commende.date|date('D d  M Y') }}{% endif %}{% endblock %} 
 {% block corps %}
        <div class="row">
         <div class="col">
           <div class="card shadow">
             <div class="card-header border-0">
-              <h3 class="mb-0">{{commende.affectation.pointVente.nom}} - {{commende.affectation.ressource.nom}} </h3>
+              <h3 class="mb-0">{{commende.pointVente.nom}}</h3>
             </div>   
         <div class="table-responsive">
     <table class="table align-items-center table-flush">
@@ -16,12 +16,12 @@
             </tr>
             <tr>
                 <th>Ressource </th>
-                <td>{{commende.affectation.ressource.nom}} {{commende.affectation.ressource.telephone}}</td>
+                <td>{{commende.pointVente.nom}}</td>
             </tr>
             <tr>
-                <th>Point de vente </th>
-                <td>{{commende.affectation.pointVente.nom}}</td>
-            </tr>
+                <th>Telephone </th>
+                <td>{{commende.pointVente.telephone}}</td>
+            </tr>            
         </tbody>
     </table>
  <h2> Détails du rapport</h2>
