--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -38,9 +38,11 @@
                 <thead class="thead-light">
                   <tr>
                     <th scope="col">SUP.</th>
-                    <th scope="col">BA</th>
-                    <th scope="col">PDV</th>
-                    <!--<th scope="col">JOURS</th>-->
+                    <th scope="col">Ville</th>
+                    <th scope="col">Ressource</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Telephone</th>
+                    <th scope="col">Jours</th>
                     {% for produit in produits|slice(0,4) %}
                     <th scope="col">{{produit.nom}}</th>
                     {% endfor %}
@@ -54,23 +56,19 @@
                      {{ performance.supnom|e }}
                    </a>
                     </th>
-                    <th scope="row">
-                      <a href="{{ path('commendes_list',{'ba':performance.baid}) }}">
-                     {{ performance.banom|e }}
-                     </a>
-                    </th>
+                    <th scope="row">{{ performance.ville }}</th>
                     <th scope="row">
                       <a href="{{ path('commendes_list',{'pointVente':performance.pdvid}) }}">
                      {{ performance.pdvnom|e }}
                      </a>
                     </th> 
-                   <!-- <th scope="row">
-                       {{ performance.nombrejours }}
-                    </th> -->
+                    <th scope="row">{{ performance.type}}</th>    
+                    <th scope="row">{{ performance.telephone}}</th>    
+                    <th scope="row">{{ performance.nombrejours }}</th>                
                     {% for vente in performance.ventes|slice(0,4) %}
                     <th scope="col">{% if vente.nombre is defined %}{{vente.nombre}}{% else %}0{% endif %}</th>
                     {% endfor %}
-                  </tr
+                  </tr>
                    {% endfor %}
                 </tbody>
               </table>
@@ -96,7 +94,6 @@
                   <tr>
                     <th scope="col">Nom</th>
                     <th scope="col">BA</th>
-                    <th scope="col">PDV</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -106,9 +103,6 @@
                       <a href="{{ path('commendes_list',{'user':item.id}) }}">
                        {{ item.nom|e }}</a>
                     </th>
-                    <td>
-                    {{ item.banumber }}
-                    </td>
                     <td>
                       {{ item.pdvnumber}}
                     </td>                    
@@ -171,7 +165,7 @@
               <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col">Ofrre</th>
+                    <th scope="col">KPI</th>
                     <th scope="col">Nombre</th>
                   </tr>
                 </thead>
@@ -200,39 +194,6 @@
   </div>
   <!-- Argon Scripts -->
   {% endblock %}
-  {% block javascripts %}
+{% block javascripts %}
   {{parent()}}
-<script type="text/javascript">
-'use strict';
-function exportTableToExcel(tableID, filename = ''){
-    var downloadLink;
-    var dataType = "type:application/csv;charset=UTF-8";
-    var tableSelect = document.getElementById(tableID);
-    var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
-    
-    // Specify file name
-    filename = filename?filename+'.xls':'excel_data.xls';
-    
-    // Create download link element
-    downloadLink = document.createElement("a");
-    
-    document.body.appendChild(downloadLink);
-    
-    if(navigator.msSaveOrOpenBlob){
-        var blob = new Blob(['\ufeff', tableHTML], {
-            type: dataType
-        });
-        navigator.msSaveOrOpenBlob( blob, filename);
-    }else{
-        // Create a link to the file
-        downloadLink.href = 'data:' + dataType + ', ' + tableHTML;
-    
-        // Setting the file name
-        downloadLink.download = filename;
-        
-        //triggering the function
-        downloadLink.click();
-    }
-}
-</script>        
 {% endblock %}
