--- a/src/AppBundle/Resources/views/part/menu.html.twig
+++ b/src/AppBundle/Resources/views/part/menu.html.twig
@@ -84,7 +84,12 @@
             <a class="nav-link" href="{{ path("commende_performances") }}">
               <i class="ni ni-chart-bar-32 text-info"></i>Performances BA
             </a>
-          </li>             
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ path("courbe_rapports") }}">
+              <i class="ni ni-chart-bar-32 text-info"></i>Courbes evolutives
+            </a>
+          </li>                       
           <li class="nav-item">
             <a class="nav-link" href="{{ path("commende_index") }}">
               <i class="ni ni-single-copy-04 text-success"></i>Historique des rapports
