--- a/src/AppBundle/Resources/views/part/menu.html.twig
+++ b/src/AppBundle/Resources/views/part/menu.html.twig
@@ -6,7 +6,7 @@
       </button>
       <!-- Brand -->
       <a class="navbar-brand pt-0" href="#">
-        <img src="{{ asset('assets/img/brand/lpm-color.png') }}" class="navbar-brand-img" alt="...">
+        <img src="{{ asset('assets/img/brand/lpm-om.jpeg') }}" class="navbar-brand-img" alt="...">
       </a>
       <!-- User -->
       <ul class="nav align-items-center d-md-none">
