--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -153,7 +153,7 @@
             <div class="card-header border-0">
               <div class="row align-items-center">
                 <div class="col">
-                  <h3 class="mb-0">Par Offre</h3>
+                  <h3 class="mb-0">Les indicateurs</h3>
                 </div>
                   <div class="col text-right">
 
